--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 				<a href="mailto:example@aol.com">Email</a>
 			</div>
 			<div class="links">
-				<a href="https://www.twitter.ca">Twitter</a>
+				<a href="https://www.twitter.com">Twitter</a>
 			</div>	
 			<div class="links">
 				<a href="https://www.github.com">Github</a>
