--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Masterbook</title>
     <link rel="stylesheet" target=_blank href="masterbook.css">
 </head>
 <body>
